
option java_outer_classname="ContainResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message ContainResponse {
	optional bool exists = 1;
	optional int64 requestId = 2;
}